--- a/mrna/requirements.txt
+++ b/mrna/requirements.txt
@@ -1,4 +1,6 @@
+Babel==0.9.6
 Flask==0.8
+Flask-Babel==0.8
 Flask-Mail==0.6.1
 Flask-WTF==0.5.4
 Jinja2==2.6
@@ -14,3 +16,5 @@ lockfile==0.9.1
 mock==0.8.0
 nose==1.1.2
 python-daemon==1.6
+pytz==2012b
+speaklater==1.2
